# openframe-oss-lib

./: .doc-pipeline-status.md  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pom.xml  renovate.json
clients/: Cargo.toml  Makefile  README.md
clients/.githooks/: pre-commit  pre-push
clients/openframe-client/: Cargo.toml  Makefile  README.md  build.rs
clients/openframe-client/src/: cli.rs  installation_initial_config_service.rs  lib.rs  service.rs  service_adapter.rs  updater.rs
clients/openframe-client/src/clients/: auth_client.rs  mod.rs  registration_client.rs  tool_agent_file_client.rs  tool_api_client.rs
clients/openframe-client/src/config/: mod.rs
clients/openframe-client/src/doctor/: checks.rs  mod.rs
clients/openframe-client/src/listener/: client_update_gate.rs  execution_listener.rs  mod.rs  openframe_client_update_listener.rs  tool_agent_update_listener.rs  tool_installation_message_listener.rs  tool_restart_message_listener.rs  tool_uninstall_message_listener.rs
clients/openframe-client/src/logging/: log_parser.rs  log_rotation.rs  log_source.rs  metrics.rs  mod.rs  nats_streaming.rs  shipping.rs
clients/openframe-client/src/models/: .download_configuration.md  .installed_tool.md  .mod.md  .tool_installation_message.md  agent_configuration.rs  agent_registration_request.rs  agent_registration_response.rs  agent_token_response.rs  device_tag.rs  download_configuration.rs  execution.rs  initial_configuration.rs  installed_agent_message.rs  installed_tool.rs  mod.rs  (+7 more)
openframe-agent-lib/: .gitignore  Cargo.toml
openframe-agent-lib/src/: api.rs  installation_initial_config_service.rs  lib.rs  service.rs  service_adapter.rs  system.rs
openframe-agent-lib/src/clients/: registration_client.rs  tool_agent_file_client.rs
openframe-agent-lib/src/config/: mod.rs
openframe-agent-lib/src/logging/: metrics.rs  mod.rs  shipping.rs
openframe-agent-lib/src/models/: initial_configuration.rs  installed_tool.rs  machine_heartbeat_message.rs  mod.rs  openframe_client_info.rs  openframe_client_update_message.rs  tool_connection.rs
openframe-agent-lib/src/platform/: directories.rs  permissions.rs  powershell.rs  uninstall.rs  windows_cleanup.rs
openframe-agent-lib/src/services/: agent_auth_service.rs  agent_configuration_service.rs  agent_registration_service.rs  device_data_fetcher.rs  encryption_service.rs  installed_tools_service.rs  machine_heartbeat_publisher.rs  machine_heartbeat_run_manager.rs  mod.rs  nats_connection_manager.rs  registration_processor.rs  tool_connection_service.rs  tool_installation_service.rs  tool_kill_service.rs  tool_uninstall_service.rs  update_handler_service.rs
(+8730 files in other folders)
