[workspace]
members = ["openframe-client"]
resolver = "2"

# Shared clippy policy: "strict but sane".
# `all` (style/complexity/perf/...) warns; correctness & suspicious are hard errors.
# CI and the pre-push hook additionally pass `-D warnings`, so any warning fails there.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = "deny"
suspicious = "deny"
