[package]
name = "openframe-agent-lib"
version = "0.1.0"
edition = "2021"
authors = ["Flamingo Team"]
description = "OpenFrame Agent Library - Core functionality for system management and monitoring agents"
license = "MIT"
repository = "https://github.com/flamingo-stack/openframe-oss-lib"
documentation = "https://docs.openframe.org"
readme = "README.md"
keywords = ["system-management", "monitoring", "agent", "automation", "library"]
categories = ["system", "monitoring"]

[lib]
name = "openframe_agent"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["attributes", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
directories = "5.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
config = { version = "0.14", features = ["toml"] }
toml = "0.8"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
zip = "0.6"
tempfile = "3.10"
semver = "1.0"
sys-info = "0.9"
aes-gcm = "0.10"
base64 = "0.21"
log = "0.4.27"
whoami = "1.4"
tracing-appender = "0.2"
flate2 = "1.0"
tar = "0.4"
service-manager = "0.8"
plist = "1.7.1"
# System information collection dependencies
hostname = "0.3"
bytes = "1.10.1"
async-nats = { git = "https://github.com/flamingo-stack/nats.rs.git", branch = "feature/openframe-auth-callback", features = ["websockets"] }
rustls-pemfile = "1.0"
regex = "1.11.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser", "shellapi", "securitybaseapi", "errhandlingapi", "winerror"] }
is_elevated = "0.1"
windows-service = "0.6"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_RemoteDesktop", "Win32_System_JobObjects", "Win32_UI_WindowsAndMessaging", "Win32_System_RestartManager"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
